# cosmic

./: .gitignore  .travis.yml  Dockerfile  makefile  pyproject.toml
cosmic/: base.py  flask_app.py  model.py  orm.py  repository.py
cosmic/adapters/: orm.py  repository.py
cosmic/domain/: model.py
cosmic/entrypoints/: flask_app.py
cosmic/service_layer/: services.py
tests/: conftest.py  test_allocate.py  test_batches.py  test_customer.py  test_data_model.py  test_order.py  test_product.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_cosmic.py  test_services.py
