[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = ""
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytype = {version = "^2020.2.20", python = ">=3.7,<3.8"}
ipython = "^7.13.0"
flake8-isort = "^2.8.0"
ipdb = "^0.13.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
