[tool.poetry]
name = "cosmic"
version = "0.1.0"
description = ""
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
psycopg2-binary = "^2.8.4"
sqlalchemy = "^1.3.15"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
ipdb = "^0.13.2"
pytest-cov = "^2.8.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
